<resources>
    <string name="app_name">Student Management System</string>
    <string name="welcome_to">Welcome to</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="xyz12_gmail_com">xyz12@gmail.com</string>
    <string name="password">Password</string>
    <string name="passwordHint">* * * * *</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="don_t_have_an_account">Don,t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="reset_password_link">Reset Password link will be sent to your email.</string>
    <string name="send_reset_link">Send Reset Link</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="call">call</string>
    <string name="verifyMessage">Verify Email</string>
    <string name="verify_message">Verify Email</string>
    <string name="undo">Verify</string>
    <string name="add_student">Add Student</string>
    <string name="edit_student">Edit Student</string>
    <string name="search_student">Search Student</string>
    <string name="all_students">All Students</string>
    <string name="admin_profile">Admin Profile</string>
    <string name="name">Name</string>
    <string name="name_hint">Abcd Wxyz</string>
    <string name="gender">Gender</string>
    <string name="male_female">Male/Female</string>
    <string name="city_pin_code">City,Pin Code,</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
    <string name="share_via">Share Via</string>
    <string name="sanjeev_kumar">Sanjeev Kumar</string>
    <string name="developer">Developer</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="sms">SMS</string>
    <string name="twitter">Twitter</string>
    <string name="monu_kumar">Monu Kumar</string>
    <string name="front_end_engineer">Front End Engineer</string>
    <string name="prajwal_dwivedi">Prajwal Dwivedi</string>
    <string name="back_end_engineer">Back End Engineer</string>
    <string name="vishal">Vishal</string>
    <string name="testing_engineer">Testing Engineer</string>
    <string name="or_with">Or With</string>
    <string name="father_name">Father Name</string>
    <string name="mother_name">Mother Name</string>
    <string name="roll_no">Roll No</string>
    <string name="phone">Phone</string>
    <string name="roll_no_hint">1234567890</string>
    <string name="address">Address</string>
    <string name="academic_details">Academic Details</string>
    <string name="intermediate_mm">Intermediate MM</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="submit">Submit</string>
    <string name="_15_08_1947">15/08/1947</string>
    <string name="xyz">XYZ</string>
    <string name="enter_roll_no">Enter Roll No.</string>
    <string name="phone_hint">Number</string>
    <string name="delete">Delete</string>
    <string name="students_list">Students List</string>
    <string name="student_name">Student Name</string>
    <string name="_16282130488">16282130488</string>
    <string name="high_school_mm">High School MM</string>
    <string name="high_school_mo">High School MO</string>
    <string name="inter_school_mo">Intermediate MO</string>
    <string name="admin_name">Admin Name</string>
    <string name="admin_email_id">Admin Email id</string>
    <string name="student_deshboard">Student Deshboard</string>
    <string name="my_profile">My Profile</string>
    <string name="developer_sanjeev_kumar">Developer(Sanjeev Kumar)</string>
    <string name="developer_monu_kumar">Developer(Monu Kumar)</string>
    <string name="developer_prajwal_dwivedi">Developer(Prajwal Dwivedi)</string>
    <string name="developer_vishal">Developer(Vishal)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="verify_email">Verify Email</string>
    <string name="verification_code_will_be_sent_to_your_mail_box">Verification code will be sent to your mail box</string>

</resources>