<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".Activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_130sdp"
            android:background="@drawable/view_header_bg">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/ubuntu_bold"
                    android:includeFontPadding="false"
                    android:text="@string/welcome_to"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_24ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="false"
                    android:text="@string/app_name"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_17ssp" />
            </LinearLayout>
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_25sdp"
            android:backgroundTint="@color/colorPrimary"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_6sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:includeFontPadding="false"
                    android:text="@string/login"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_24ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_35sdp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="@string/email"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_15ssp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/adminLoginEmailTIET"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:background="@drawable/textfieldbg"
                    android:fontFamily="@font/ubuntu_regular"
                    android:hint="@string/xyz12_gmail_com"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/white"
                    android:paddingHorizontal="@dimen/_7sdp"
                    android:textColorHint="@color/textHintColor"
                    android:textSize="@dimen/_13ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="@string/password"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_15ssp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/adminLoginPasswordTIET"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:background="@drawable/textfieldbg"
                    android:fontFamily="@font/ubuntu_regular"
                    android:hint="@string/passwordHint"
                    android:imeOptions="actionNext"
                    android:paddingHorizontal="@dimen/_7sdp"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/textHintColor"
                    android:textSize="@dimen/_13ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="false"
                    android:onClick="resetPassword"
                    android:text="@string/forgot_password"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_10ssp" />

                <View
                    android:layout_width="@dimen/_83ssp"
                    android:layout_height="@dimen/_1sdp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:background="@android:color/white" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_40sdp"
                    android:backgroundTint="@android:color/white"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="@string/login"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/ubuntu_regular"
            android:text="@string/don_t_have_an_account"
            android:textColor="@android:color/black" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@android:color/white"
            android:fontFamily="@font/ubuntu_bold"
            android:onClick="signupAdmin"
            android:paddingHorizontal="@dimen/_5sdp"
            android:text="@string/sign_up"
            android:textSize="@dimen/_15ssp" />

    </LinearLayout>
</ScrollView>