<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".Activities.ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_130sdp"
            android:background="@drawable/view_header_bg">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/ubuntu_bold"
                    android:includeFontPadding="false"
                    android:text="@string/welcome_to"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_24ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="false"
                    android:text="@string/app_name"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_17ssp" />
            </LinearLayout>
        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="@dimen/_250sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_25sdp"
            android:backgroundTint="@color/colorPrimary"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_6sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:includeFontPadding="false"
                    android:text="@string/forgot_password"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_24ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_35sdp"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="@string/email"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_15ssp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailTIET"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:background="@drawable/textfieldbg"
                    android:fontFamily="@font/ubuntu_regular"
                    android:hint="@string/xyz12_gmail_com"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textEmailAddress"
                    android:paddingHorizontal="@dimen/_7sdp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/textHintColor"
                    android:textSize="@dimen/_13ssp" />

                <TextView
                    android:id="@+id/note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/ubuntu_regular"
                    android:text="@string/reset_password_link" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_40sdp"
                    android:backgroundTint="@android:color/white"
                    android:fontFamily="@font/ubuntu_bold"
                    android:text="@string/send_reset_link"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


</ScrollView>