<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/myLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_anim"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/ubuntu_bold"
                android:padding="11dp"
                android:text="@string/admin_profile"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="35sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/admin_picImageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/admin_pic"
                app:civ_border_color="#FFFFFF"
                app:civ_border_width="2dp"
                app:civ_circle_background_color="@color/colorPrimary" />

            <androidx.cardview.widget.CardView
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_25sdp"
                android:backgroundTint="@color/colorPrimary"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_6sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:fontFamily="@font/ubuntu_bold"
                        android:includeFontPadding="false"
                        android:text="@string/login"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_24ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_35sdp"
                        android:fontFamily="@font/ubuntu_bold"
                        android:text="@string/name"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_15ssp" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/adminProfileNameTIET"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginHorizontal="@dimen/_20sdp"
                        android:background="@drawable/textfieldbg"
                        android:fontFamily="@font/ubuntu_regular"
                        android:hint="@string/name_hint"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="text"
                        android:paddingHorizontal="@dimen/_7sdp"
                        android:textColor="@android:color/white"
                        android:textColorHint="@color/textHintColor"
                        android:textSize="@dimen/_13ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/ubuntu_bold"
                        android:text="@string/gender"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_15ssp" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/adminProfileGenderTIET"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginHorizontal="@dimen/_20sdp"
                        android:background="@drawable/textfieldbg"
                        android:fontFamily="@font/ubuntu_regular"
                        android:hint="@string/male_female"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="text"
                        android:paddingHorizontal="@dimen/_7sdp"
                        android:textColor="@android:color/white"
                        android:textColorHint="@color/textHintColor"
                        android:textSize="@dimen/_13ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/ubuntu_bold"
                        android:text="@string/address"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/_15ssp" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/adminProfileAddressTIET"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_marginHorizontal="@dimen/_20sdp"
                        android:background="@drawable/textfieldbg"
                        android:fontFamily="@font/ubuntu_regular"
                        android:hint="@string/city_pin_code"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:includeFontPadding="false"
                        android:inputType="text"
                        android:paddingHorizontal="@dimen/_7sdp"
                        android:textColor="@android:color/white"
                        android:textColorHint="@color/textHintColor"
                        android:textSize="@dimen/_13ssp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/adminProfileUpdateButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_40sdp"
                        android:backgroundTint="@android:color/white"
                        android:fontFamily="@font/ubuntu_bold"
                        android:text="@string/update"
                        android:textColor="@color/colorPrimary" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>